objects/saga__c.object
<CustomObject>
    <fields>
        <fullName>Far__c</fullName>
        <formula>(9*celsius__c )/5+32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Far</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>celsius__c</fullName>
        <label>celsius</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>van__c</fullName>
        <label>van</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vandana__c</fullName>
        <label>vandana</label>
        <type>Phone</type>
    </fields>
    <label>saga</label>
    <nameField>
        <label>saga Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sagas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>